--- a/segundoBlazor/Server/segundoBlazor.Server.csproj
+++ b/segundoBlazor/Server/segundoBlazor.Server.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="19.1.0.57" />
   </ItemGroup>
 
   <ItemGroup>
